k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-site-service
  namespace: rds
spec:
  selector:
    app: status-site
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
